<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TopBar">


        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btn_friends"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/friend_icon_description"
            android:scaleType="fitXY"
            android:src="@drawable/friend_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bereal"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:textSize="28sp"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btn_profile"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/profile_icon_description"
            android:scaleType="fitXY"
            android:src="@drawable/profile_icon" />



    </LinearLayout>