<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_new_friends_request"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".FriendsRequest"
    android:layout_width="match_parent"

  >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"

        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_request_to_set"
            android:text="@string/username_gmail_com"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/has_requested_to_follow_you"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_accept_friend"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"

        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_to_my_friends"
        android:src="@drawable/ic_action_add"
        app:fabCustomSize="30dp"

        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_reject_friend"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_to_my_friends"
        android:src="@drawable/ic_action_delete"
        app:fabCustomSize="30dp"
        />

</LinearLayout>